--- a/package.json
+++ b/package.json
@@ -37,21 +37,17 @@
     "tar-fs": "^1.11.1"
   },
   "eslintConfig": {
-    "extends": "eslint:recommended",
-    "env": {
-      "node": true,
-      "mocha": true
-    },
-    "rules": {
-      "semi": 2,
-      "no-console": 0
+    "extends": "iplayer-es6",
+    "parserOptions": {
+      "ecmaVersion": 8
     }
   },
   "devDependencies": {
-    "codeclimate-test-reporter": "^0.3.1",
-    "eslint": "^2.4.0",
+    "codeclimate-test-reporter": "^0.5.0",
+    "eslint": "^4.19.1",
+    "eslint-config-iplayer-es6": "^4.0.1",
     "istanbul": "^0.4.2",
-    "mocha": "^2.4.5",
-    "sinon": "^1.17.3"
+    "mocha": "^5.0.4",
+    "sinon": "^4.4.8"
   }
 }
