--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Automatically generates an RPM Spec file for your Node.js project",
   "main": "index.js",
   "scripts": {
-    "test": "mocha",
+    "test": "mocha 'test/**/*.js' --recursive --timeout 60000 --exit",
     "lint": "eslint .",
     "posttest": "npm run lint",
     "coverage": "istanbul cover _mocha -- -R dot"
@@ -30,10 +30,10 @@
     "speculate": "./bin/speculate.js"
   },
   "dependencies": {
-    "commander": "^2.9.0",
+    "commander": "^10.0.0",
     "handlebars": "^4.7.7",
-    "rimraf": "^2.5.2",
-    "tar-fs": "^1.11.1"
+    "rimraf": "^4.1.0",
+    "tar-fs": "^2.1.1"
   },
   "eslintConfig": {
     "extends": "iplayer",
@@ -42,15 +42,15 @@
     }
   },
   "devDependencies": {
-    "codeclimate-test-reporter": "^0.5.0",
-    "eslint": "^8.6.0",
+    "codeclimate-test-reporter": "^0.5.1",
+    "eslint": "^8.32.0",
     "eslint-config-iplayer": "^8.0.0",
-    "eslint-plugin-mocha": "^10.0.3",
-    "istanbul": "^0.4.2",
-    "mocha": "^5.0.4",
-    "sinon": "^4.4.8"
+    "eslint-plugin-mocha": "^10.1.0",
+    "istanbul": "^0.4.5",
+    "mocha": "^10.2.0",
+    "sinon": "^15.0.1"
   },
   "engines": {
-    "node": ">=12.22.0"
+    "node": ">=18.12.1"
   }
 }
