--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "commander": "^10.0.0",
     "handlebars": "^4.7.7",
     "rimraf": "^4.1.0",
+    "semver": "^7.7.1",
     "tar-fs": "^2.1.1"
   },
   "eslintConfig": {
