--- a/test/fixtures/my-super-long-long-long-long-cat-api.service
+++ b/test/fixtures/my-super-long-long-long-long-cat-api.service
@@ -3,7 +3,6 @@ Description=My Super Long Long Long Long Cat API
 After=network.target nss-lookup.target
 
 [Service]
-ExecStart=/usr/bin/npm start
 WorkingDirectory=/usr/lib/my-super-long-long-long-long-cat-api
 Restart=always
 StandardOutput=syslog
@@ -11,6 +10,7 @@ StandardError=syslog
 SyslogIdentifier=my-super-long-long-long-long-cat-api
 User=my-super-long-long-long-long-cat
 Group=my-super-long-long-long-long-cat
+ExecStart=/usr/bin/node --run start
 
 [Install]
 WantedBy=multi-user.target
