--- a/test/fixtures/my-cool-api-environment.service
+++ b/test/fixtures/my-cool-api-environment.service
@@ -3,7 +3,6 @@ Description=My Cool API
 After=network.target nss-lookup.target
 
 [Service]
-ExecStart=/usr/bin/npm start
 WorkingDirectory=/usr/lib/my-cool-api
 Restart=always
 StandardOutput=syslog
@@ -13,6 +12,7 @@ User=my-cool-api
 Group=my-cool-api
 Environment=NODE_ENV=production
 Environment=NODE_INSTANCE=%i
+ExecStart=/usr/bin/node --run start
 
 [Install]
 WantedBy=multi-user.target
