--- a/test/fixtures/my-cool-api-with-unit-options.service
+++ b/test/fixtures/my-cool-api-with-unit-options.service
@@ -5,7 +5,6 @@ After=my-coolest-api.service
 Requires=my-coolest-api.service
 
 [Service]
-ExecStart=/usr/bin/npm start
 WorkingDirectory=/usr/lib/my-cool-api
 Restart=always
 StandardOutput=syslog
@@ -13,6 +12,7 @@ StandardError=syslog
 SyslogIdentifier=my-cool-api
 User=my-cool-api
 Group=my-cool-api
+ExecStart=/usr/bin/node --run start
 
 [Install]
 WantedBy=multi-user.target
