chore: convert repo to pnpm

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Automatically generates an RPM Spec file for your Node.js project",
   "main": "index.js",
   "scripts": {
-    "test": "mocha && npm run lint",
+    "test": "mocha && pnpm run lint",
     "lint": "eslint .",
     "coverage": "nyc mocha && nyc report --reporter=html && nyc report --reporter=json-summary"
   },
@@ -52,6 +52,7 @@
     "sinon": "^21.0.0"
   },
   "engines": {
-    "node": ">=12.22.0"
+    "node": ">=12.22.0",
+    "pnpm": ">=10"
   }
 }
