--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,6 @@
 # This config was generated using ibl-scripts
-
 # Do not run scripts, specifically any pre/post scripts
 ignore-scripts = true
+save-exact=true
+ignore-scripts=true
+engine-strict=true
